--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,9 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#424242</color>
+    <color name="colorAccent">#757575</color>
     <color name="colorOrange">#F5A623</color>
     <color name="navDrawerListBackground">#1B1B1B</color>
     <color name="navDrawerListItems">#202020</color>
+    <color name="materialGray600">#757575</color>
 </resources>
