--- a/app/src/main/res/drawable-xhdpi/custom_seek_bar_thumb_.xml
+++ b/app/src/main/res/drawable-xhdpi/custom_seek_bar_thumb_.xml
@@ -2,14 +2,14 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
        android:shape="rectangle">
     <corners
-        android:radius="15dp"
+        android:radius="4dp"
         />
 
-    <solid android:color="#dc000000"/>
+    <solid android:color="#757575"/>
 
 
     <size
-        android:width="270dp"
-        android:height="60dp"
+        android:width="10dp"
+        android:height="16dp"
         />
 </shape>
