--- a/app/src/main/res/layout/screen_location_suggestion.xml
+++ b/app/src/main/res/layout/screen_location_suggestion.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/transparent"
     android:orientation="vertical">
 
     <LinearLayout
@@ -17,35 +18,61 @@
             android:layout_weight="0.5" />
 
         <LinearLayout
+            android:paddingLeft="36dp"
+            android:paddingRight="36dp"
             android:layout_width="0dp"
             android:layout_height="250dp"
-            android:layout_weight="1"
+            android:layout_weight="1.5"
             android:background="@drawable/box_transparent_autocomplete"
-            android:gravity="center_horizontal"
+            android:gravity="center_horizontal|top"
             android:orientation="horizontal"
             android:padding="26dp">
 
-            <AutoCompleteTextView
-                android:layout_marginRight="16dp"
-                style="@style/transparentEditText"
-                android:dropDownHeight="200dp"
-                android:id="@+id/scren_location_suggestion_autocomlete"
+            <LinearLayout
                 android:layout_width="0dp"
-                android:textColor="@color/colorOrange"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:layout_height="wrap_content" />
+                android:orientation="vertical">
+
+                <EditText
+                    android:textSize="19sp"
+                    style="@style/transparentEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="38dp"
+                    android:layout_marginRight="8dp"
+                    android:paddingLeft="16dp"
+                    android:singleLine="true"
+                    android:textColor="@color/colorOrange" />
+
+                <ListView
+                    android:id="@+id/screen_location_suggestion_autocomplete"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1" />
+
+            </LinearLayout>
 
             <com.example.daniel.onroute.SeekBar.VerticalSeekBar
-                android:layout_marginTop="20dp"
                 android:layout_width="wrap_content"
-                android:layout_height="200dp" />
+                android:layout_height="180dp"
+                android:layout_marginTop="20dp"
+                android:max="10"
+                android:progress="5"
+                android:progressDrawable="@drawable/progress" />
 
 
-            <ImageView
-                android:layout_marginRight="16dp"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:src="@drawable/search" />
+            <LinearLayout
+                android:background="@drawable/box_transparent_search"
+                android:layout_width="45dp"
+                android:gravity="center"
+                android:layout_height="35dp">
+
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@drawable/search" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
