--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -30,4 +30,7 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="CustomSpinner" parent="Widget.AppCompat.DropDownItem.Spinner">
+        <item name="android:scrollbarSize">30dp</item>
+    </style>
 </resources>
