Preparing project for Core Screens

--- a/app/src/main/res/drawable-xhdpi/custom_seek_bar_thumb_.xml
+++ b/app/src/main/res/drawable-xhdpi/custom_seek_bar_thumb_.xml
@@ -5,7 +5,7 @@
         android:radius="4dp"
         />
 
-    <solid android:color="#757575"/>
+    <solid android:color="@color/materialGray600"/>
 
 
     <size
