--- a/app/src/main/res/layout/screen_video_player.xml
+++ b/app/src/main/res/layout/screen_video_player.xml
@@ -59,6 +59,8 @@
             android:orientation="vertical">
 
             <SeekBar
+                android:max="100"
+                android:progress="50"
                 android:layout_width="650dp"
                 android:layout_height="wrap_content"
                 android:progressDrawable="@drawable/progress_video" />
